lints.workspace = true

[package]
name = "amaru-kernel"
version.workspace = true
edition.workspace = true
description = "Core Cardano types, primitives, and domain logic for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-utils = ["dep:proptest", "dep:rand"]
tracing = ["amaru-minicbor-extra/tracing"]

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
bech32.workspace = true
bytes = { workspace = true, features = ["serde"] }
hex.workspace = true
itertools.workspace = true
minicbor.workspace = true
num.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-math.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
proptest = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-minicbor-extra.workspace = true

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
rand.workspace = true
test-case.workspace = true
# Internal dependencies ───────────────────────────────────────────────────────┐
cbor4ii.workspace = true

[target.'cfg(target_family="wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
