lints.workspace = true

[package]
name = "amaru-ledger"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["proptest", "amaru-slot-arithmetic/test-utils", "amaru-kernel/test-utils"]

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
anyhow.workspace = true
hex.workspace = true
num.workspace = true
proptest = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-iter-borrow.workspace = true
amaru-ouroboros-traits.workspace = true
amaru-progress-bar.workspace = true
amaru-slot-arithmetic.workspace = true
amaru-metrics.workspace = true


[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
test-case.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-slot-arithmetic = { workspace = true, features = ["test-utils"] }
amaru-tracing-json.workspace = true
minicbor.workspace = true
once_cell.workspace = true

[target.'cfg(not(std))'.dependencies]
num = { workspace = true, default-features = false, features = [
  "alloc",
  "libm",
] }
