lints.workspace = true

[package]
name = "amaru-ledger"
version.workspace = true
edition.workspace = true
description = "Ledger engine for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-utils = ["proptest", "amaru-kernel/test-utils"]

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
num.workspace = true
proptest = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-iter-borrow.workspace = true
amaru-observability.workspace = true
amaru-kernel.workspace = true
amaru-metrics.workspace = true
amaru-ouroboros-traits.workspace = true
amaru-plutus.workspace = true
amaru-progress-bar.workspace = true
amaru-uplc-turbo.workspace = true

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
once_cell.workspace = true
proptest.workspace = true
test-case.workspace = true
toml.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-tracing-json.workspace = true

[build-dependencies]
anyhow.workspace = true
toml.workspace = true

[target.'cfg(not(std))'.dependencies]
num = { workspace = true, default-features = false, features = [
  "alloc",
  "libm",
] }
