[package]
name = "amaru-mempool"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
amaru-kernel = { path = "../amaru-kernel" }
parking_lot.workspace = true

[dev-dependencies]
minicbor.workspace = true
assertables.workspace = true
