[package]
name = "amaru-mempool"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
amaru-kernel.workspace = true
amaru-ouroboros-traits.workspace = true
minicbor.workspace = true
parking_lot.workspace = true
tokio = { "workspace" = true, features = ["time", "macros", "rt"] }

[dev-dependencies]
anyhow.workspace = true
assertables.workspace = true
