[package]
name = "amaru-mempool"
version.workspace = true
edition.workspace = true
description = "Transaction mempool for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
amaru-kernel.workspace = true
amaru-ouroboros-traits.workspace = true
parking_lot.workspace = true
tokio = { "workspace" = true, features = ["time", "macros", "rt"] }

[dev-dependencies]
anyhow.workspace = true
assertables.workspace = true
