lints.workspace = true


[package]
name = "amaru-metrics"
version.workspace = true
edition.workspace = true
description = "Metrics collection and telemetry primitives for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External Dependencies
serde.workspace = true
[target.'cfg(not(target_arch="wasm32"))'.dependencies]
opentelemetry.workspace = true
