lints.workspace = true

[package]
name = "amaru-minicbor-extra"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
minicbor.workspace = true
tracing = { workspace = true, optional = true }
