lints.workspace = true

[package]
name = "amaru-minicbor-extra"
version.workspace = true
edition.workspace = true
description = "Extra CBOR encoding utilities built on top of minicbor"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
minicbor.workspace = true
tracing = { workspace = true, optional = true }
