lints.workspace = true

[package]
name = "amaru-network"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
acto.workspace = true
anyhow.workspace = true
binrw.workspace = true
bytes.workspace = true
futures-util.workspace = true
pallas-network.workspace = true
pallas-traverse.workspace = true
pure-stage.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

amaru-kernel.workspace = true
amaru-ouroboros.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-subscriber.workspace = true
