lints.workspace = true

[package]
name = "amaru-network"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
pallas-network.workspace = true
pallas-traverse.workspace = true
parking_lot.workspace = true
pure-stage.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio = { "workspace" = true, features = ["net"] }
tracing.workspace = true

amaru-kernel.workspace = true
amaru-ouroboros.workspace = true

[dev-dependencies]
anyhow.workspace = true
amaru-mempool.workspace = true
hex.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
