[package]
name = "amaru-observability"
version.workspace = true
edition.workspace = true
description = "Observability instrumentation and structured event tracking for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
amaru-observability-macros.workspace = true
inventory.workspace = true

[lints]
workspace = true
