lints.workspace = true

[package]
name = "amaru-ouroboros-traits"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["dep:rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
parking_lot.workspace = true
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-slot-arithmetic.workspace = true
amaru-metrics.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[package.metadata.cargo-machete]
ignored = ["rand"]
