lints.workspace = true

[package]
name = "amaru-ouroboros-traits"
version.workspace = true
edition.workspace = true
description = "Trait abstractions for the Ouroboros consensus protocol"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
test-utils = ["dep:rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
parking_lot.workspace = true
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-metrics.workspace = true

[package.metadata.cargo-machete]
ignored = ["rand"]

