lints.workspace = true

[package]
name = "amaru-ouroboros"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
hex.workspace = true
kes-summed-ed25519.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-math.workspace = true
pallas-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
vrf_dalek.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-ouroboros-traits.workspace = true

# FIXME RK: figure out exact WASM story to properly solve this
getrandom = { workspace = true, features = ["wasm_js"] }

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
ctor.workspace = true
insta = { workspace = true, features = ["yaml"] }
pallas-traverse.workspace = true
proptest.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(not(std))'.dependencies]
num = { workspace = true, default-features = false, features = [
    "alloc",
    "libm",
] }
