[package]
name = "amaru-plutus"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
# External dependencies
bumpalo.workspace = true
hex.workspace = true
itertools.workspace = true
num.workspace = true
thiserror.workspace = true
pallas-codec.workspace = true

# Internal dependencies
amaru-kernel.workspace = true

[dev-dependencies]
serde.workspace = true
test-case.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true

[lints]
workspace = true
