[package]
name = "amaru-plutus"
version.workspace = true
edition.workspace = true
description = "Plutus script evaluation utilities for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External dependencies
uplc-turbo.workspace = true
hex.workspace = true
itertools.workspace = true
num.workspace = true
thiserror.workspace = true
pallas-codec.workspace = true

# Internal dependencies
amaru-kernel.workspace = true

[dev-dependencies]
serde.workspace = true
test-case.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true

[lints]
workspace = true
