lints.workspace = true

[package]
name = "amaru-progress-bar"
version.workspace = true
edition.workspace = true
description = "Progress bar abstractions for long-running operations"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
indicatif = { workspace = true, optional = true }

[features]
default = []
terminal = ["indicatif"]
