lints.workspace = true

[package]
name = "amaru-protocols"
version.workspace = true
edition.workspace = true
description = "Cardano network mini-protocol implementations for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
bytes = { workspace = true, features = ["serde"] }
cbor-data.workspace = true
futures-util.workspace = true
hex.workspace = true
minicbor.workspace = true
pallas-traverse.workspace = true
pure-stage.workspace = true
serde.workspace = true
tracing.workspace = true

amaru-kernel = { "workspace" = true, features = ["test-utils"] }
amaru-observability.workspace = true
amaru-ouroboros.workspace = true
amaru-ouroboros-traits = { "workspace" = true, features = ["test-utils"] }

[dev-dependencies]
amaru-mempool.workspace = true
amaru-network.workspace = true
hex.workspace = true
pallas-primitives.workspace = true
proptest.workspace = true
socket2.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
