lints.workspace = true

[package]
name = "amaru-stores"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
hex.workspace = true
rocksdb = { workspace = true, optional = true }
tracing.workspace = true
rand = { workspace = true, optional = true }

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-ledger.workspace = true
amaru-iter-borrow.workspace = true
amaru-slot-arithmetic.workspace = true
amaru-ouroboros-traits = { workspace = true, features = [] }

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
tempfile.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-ledger = { workspace = true, features = ["test-utils"] }
amaru-ouroboros-traits = { workspace = true, features = ["test-utils"] }

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb", "dep:rand"]
test-utils = ["amaru-kernel/test-utils", "amaru-ouroboros-traits/test-utils"]

[package.metadata.cargo-machete]
ignored = ["rand"]
