lints.workspace = true

[package]
name = "amaru-stores"
version.workspace = true
edition.workspace = true
description = "Storage backends for the Amaru Cardano node"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
hex.workspace = true
rocksdb = { workspace = true, optional = true }
tracing.workspace = true
rand = { workspace = true, optional = true }

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel.workspace = true
amaru-ledger.workspace = true
amaru-iter-borrow.workspace = true
amaru-observability.workspace = true
amaru-ouroboros-traits = { workspace = true, features = [] }

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
tempfile.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-ledger = { workspace = true, features = ["test-utils"] }
amaru-ouroboros-traits = { workspace = true, features = ["test-utils"] }

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb", "dep:rand"]

[package.metadata.cargo-machete]
ignored = ["rand"]
