lints.workspace = true

[package]
name = "amaru-tracing-json"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = { "workspace" = true, features = ["preserve_order"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
hex.workspace = true
assert-json-diff.workspace = true
pretty_assertions.workspace = true
