lints.workspace = true

[package]
name = "amaru"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
acto.workspace = true
async-trait.workspace = true
clap.workspace = true
futures-util.workspace = true
gasket.workspace = true
hex.workspace = true
indicatif.workspace = true
indoc.workspace = true
minicbor.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-network.workspace = true
pallas-traverse.workspace = true
serde.workspace = true
serde_json.workspace = true
slot-arithmetic.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true

amaru-consensus.workspace = true
amaru-kernel.workspace = true
amaru-ledger.workspace = true
amaru-stores.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
flate2 = "1.1.2"
async-compression = { version = "0.4.24",  features = ["futures-io", "gzip"] }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true
test-case.workspace = true
iter-borrow.workspace = true
rocksdb.workspace = true

[build-dependencies]
built = { workspace = true, features = ["git2"] }
