lints.workspace = true

[package]
name = "amaru"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
acto.workspace = true
anyhow.workspace = true
async-compression.workspace = true
async-trait.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
indoc.workspace = true
minicbor.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
pallas-network.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "fs",
  "net",
  "rt",
  "rt-multi-thread",
  "signal",
] }
tokio-util.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-consensus.workspace = true
amaru-kernel.workspace = true
amaru-ledger.workspace = true
amaru-network.workspace = true
amaru-stores.workspace = true
amaru-ouroboros-traits.workspace = true
amaru-progress-bar = { workspace = true, features = ["terminal"] }
amaru-slot-arithmetic.workspace = true
amaru-metrics.workspace = true
pure-stage.workspace = true

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.2"

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
insta = { workspace = true, features = ["json"] }
proptest.workspace = true
rand.workspace = true
tempfile.workspace = true
test-case.workspace = true
rocksdb.workspace = true
once_cell.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-iter-borrow.workspace = true

[build-dependencies]
built = { workspace = true, features = ["git2"] }
amaru-kernel.workspace = true
