[package]
name = "amaru-ledger"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
num.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true

amaru-kernel = { path = "../kernel" }

[dev-dependencies]
proptest.workspace = true

[target.'cfg(not(std))'.dependencies]
num = { version = "0.4.3", default-features = false, features = ["alloc", "libm"] }